--- a/max_width_1225px.css
+++ b/max_width_1225px.css
@@ -25,6 +25,8 @@ nav {
 
 .separateur {
     margin: 0;
+    padding-top: 1%;
+    padding-bottom: 1%;
 }
 
 .description_nav {
@@ -37,9 +39,9 @@ nav {
 }
 
 .propos {
-    width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
     margin-bottom: 5%;
     margin-top: 5%;
 }
