--- a/max_width_425px.css
+++ b/max_width_425px.css
@@ -55,3 +55,9 @@
     margin-right: 20%;
     margin-left: 20%;
 }
+
+.recommandation {
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
