ajustement de la responsivite sur le cv modification du nom du de max_width_400px en maw_width_500px ajustement sur le reponsive de 1225px et modification des liens sur la page html

--- a/max_width_1225px.css
+++ b/max_width_1225px.css
@@ -79,6 +79,18 @@ nav {
     text-align: left;
 }
 
+.competence_paul_valery {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.competence_openclassrooms {
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
 h4 {
     text-align: center;
 }
