--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ span {
     margin-left: 5%;
     font-family: 'FjallaOne-Regular', arial, sans-serif;
     width: 25%;
+    margin-right: 10%;
 }
 
 .description_paul_valery,
