--- a/max_width_320px.css
+++ b/max_width_320px.css
@@ -4,26 +4,18 @@
 
 .description_nav {
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
     font-size: 0.8em;
+    margin: 0 10% 0 10%;
 }
 
 .propos {
     width: 90%;
-    margin-left: 5%;
-    margin-right: 5%;
     font-weight: 0.8em;
+    margin: 0 5% 0 5%;
 }
 
-.paul_valery {
-    width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
+.paul_valery,
 .recommandation {
     width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: 0 20% 0 20%;
 }
