--- a/max_width_500px.css
+++ b/max_width_500px.css
@@ -1,13 +1,11 @@
 .description_nav {
     width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 0 25% 0 25%;
 }
 
 .propos {
     width: 55%;
-    margin-left: 22.5%;
-    margin-right: 22.5%;
+    margin: 0 22.5% 0 22.5%;
 }
 
 .projet {
@@ -16,26 +14,22 @@
 
 .paul_valery {
     width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 0 25% 0 25%;
 }
 
 .description_paul_valery {
     width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: 0 20% 0 20%;
 }
 
 .openclassrooms {
     width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 0 25% 0 25%;
 }
 
 .description_openclassrooms {
     width: 60%;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin: 0 20% 0 20%;
 }
 
 .competence_paul_valery {
@@ -50,6 +44,5 @@
 
 .recommandation {
     width: 40%;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin: 0 30% 0 30%;
 }
