--- a/max_width_tv.css
+++ b/max_width_tv.css
@@ -5,9 +5,7 @@
 }
 
 .photo img {
-    margin-left: 18%;
-    margin-right: 18%;
-    margin-top: 15%;
+    margin: 15% 18% 0 18%;
     width: 320px;
     height: 320px;
     border-radius: 160px;
@@ -15,24 +13,19 @@
 
 .separateur {
     font-size: 2rem;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding: 3% 0 3% 0;
 }
 
 .description_nav {
     font-size: 2rem;
     width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom: 5%;
+    margin: 0 10% 5% 10%;
 }
 
 .propos {
     width: 70%;
     font-size: 2rem;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 2%;
+    margin: 0 15% 2% 15%;
 }
 
 .container_fontawesome {
@@ -59,6 +52,5 @@
 }
 
 .recommandation {
-    margin-left: 15%;
-    margin-right: 15%;
+    margin: 0 15% 0 15%;
 }
