--- a/style.css
+++ b/style.css
@@ -59,8 +59,7 @@ nav {
 
 .container_fontawesome {
     font-size: 2.5rem;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin: 5% 0 5% 0;
 }
 
 section,
@@ -104,8 +103,7 @@ article {
 
 .projet_experience {
     border: 1px solid black;
-    margin-left: 5%;
-    margin-right: 1%;
+    margin: 0 5% 0 5%;
     width: 30%;
     font-weight: bolder;
     font-family: 'FjallaOne-Regular', arial, sans-serif;
@@ -130,10 +128,9 @@ span {
 .openclassrooms {
     text-transform: uppercase;
     font-weight: bolder;
-    margin-left: 5%;
     font-family: 'FjallaOne-Regular', arial, sans-serif;
     width: 25%;
-    margin-right: 10%;
+    margin: 0 10% 0 10%;
 }
 
 .description_paul_valery,
