--- a/max_width_1024px.css
+++ b/max_width_1024px.css
@@ -30,8 +30,8 @@ nav {
 
 .description_nav {
     text-align: left;
-    width: 25%;
-    margin: 5% 35.5% 5% 35.5%;
+    width: 22%;
+    margin: 5% 39% 5% 39%;
 }
 
 .propos {
@@ -41,13 +41,12 @@ nav {
 
 .container_article {
     display: block;
-    margin-top: 5%;
-    margin-bottom: 0;
+    margin: 5% 0 0 0;
 }
 
 .projet {
     width: 35%;
-    margin-bottom: -3%;
+    margin-bottom: 2%;
 }
 
 .description {
