--- a/max_width_425px.css
+++ b/max_width_425px.css
@@ -1,49 +1,116 @@
-.description_nav,
-.competence_openclassrooms {
+.container {
+    width: auto;
+    height: auto;
+    margin: auto;
+}
+
+.page_responsive {
+    margin-top: 5%;
+}
+
+.container {
+    display: inherit;
+}
+
+nav {
+    display: block;
+    width: 100%;
+    height: auto;
+    font-size: 1.5rem;
+}
+
+.photo {
+    display: none;
+}
+
+.separateur {
+    margin: 0;
+    padding: 1% 0 1% 0;
+}
+
+.description_nav {
+    text-align: left;
     width: 60%;
-    margin: 0 20% 0 20%;
+    margin: 5% 20% 5% 20%;
 }
 
 .propos {
     width: 70%;
-    margin: 0 15% 0 15%;
+    margin: 5% 15% 5% 15%;
 }
 
-.titre {
-    width: 90%;
-    margin: 0 5% 0 5%;
+.container_article {
+    display: block;
+    margin-top: 5%;
+    margin-bottom: 0;
 }
 
 .projet {
     width: 70%;
+    margin-bottom: 2%;
 }
 
-.paul_valery {
-    width: 50%;
-    margin: 0 25% 0 25%;
-}
-
-.description_paul_valery {
-    width: 70%;
-    margin: 0 15% 0 15%;
-}
-
-.competence_paul_valery {
-    width: 80%;
-    margin: 0 10% 0 10%;
-}
-
-.openclassrooms {
-    width: 50%;
-    margin: 0 25% 0 25%;
-}
-
-.description_openclassrooms {
+.description {
     width: 90%;
     margin: 0 5% 0 5%;
 }
 
+.titre {
+    width: 100%;
+    margin: 0;
+}
+
+.paul_valery,
+.openclassrooms {
+    width: 50%;
+    margin: 0 25% 0 25%;
+    text-align: center;
+}
+
+.description_paul_valery,
+.description_openclassrooms {
+    width: 70%;
+    margin: 0 15% 0 15%;
+    text-align: left;
+}
+
+.competence_paul_valery {
+    width: 90%;
+}
+
+.competence_openclassrooms {
+    width: 80%;
+    margin: 0 10% 0 10%;
+}
+
+h4 {
+    text-align: center;
+}
+
+.titre_responsive {
+    display: inherit;
+    font-family: 'Lobster-Regular', arial, sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+img {
+    width: 180px;
+    height: 180px;
+    border-radius: 90px;
+    border: 1px solid black;
+    margin-top: 5%;
+}
+
+.titre_principal {
+    display: none;
+}
+
+.container_recommandation {
+    display: block;
+}
+
 .recommandation {
     width: 50%;
-    margin: 0 25% 10% 25%;
+    margin: 10% 25% 10% 25%;
 }
