--- a/max_width_768px.css
+++ b/max_width_768px.css
@@ -1,44 +1,113 @@
+.container {
+    width: auto;
+    height: auto;
+    margin: auto;
+    display: none;
+}
+
+.page_responsive {
+    margin-top: 5%;
+}
+
+.container {
+    display: inherit;
+}
+
+nav {
+    display: block;
+    width: 100%;
+    height: auto;
+    font-size: 1.5rem;
+}
+
+.photo {
+    display: none;
+}
+
+.separateur {
+    margin: 0;
+    padding: 1% 0 1% 0;
+}
+
 .description_nav {
-    width: 35%;
-    margin: 0 32.5% 0 32.5%;
+    text-align: left;
+    width: 31%;
+    margin: 5% 34.5% 5% 34.5%;
 }
 
 .propos {
     width: 50%;
-    margin: 0 25% 0 25%;
+    margin: 5% 25% 5% 25%;
+}
+
+.container_article {
+    display: block;
+    margin-top: 5%;
+    margin-bottom: 0;
+}
+
+.projet {
+    width: 50%;
+    margin-bottom: 2%;
+}
+
+.description {
+    width: 90%;
+    margin: 0 5% 0 5%;
 }
 
 .paul_valery,
 .openclassrooms {
     width: 30%;
     margin: 0 35% 0 35%;
+    text-align: center;
 }
 
-.description_paul_valery {
+.description_paul_valery,
+.description_openclassrooms {
     width: 40%;
     margin: 0 30% 0 30%;
+    text-align: left;
+}
+
+.competence_paul_valery {
+    width: 100%;
+    margin: 0;
 }
 
 .competence_openclassrooms {
-    margin-left: 10%;
-    width: 70%;
+    width: 80%;
+    margin: 0 10% 0 10%;
 }
 
-.container_recommandation {
-    display: block;
+h4 {
+    text-align: center;
+}
+
+.titre_responsive {
+    display: inherit;
+    font-family: 'Lobster-Regular', arial, sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+img {
+    width: 180px;
+    height: 180px;
+    border-radius: 90px;
+    border: 1px solid black;
+    margin-top: 5%;
+}
+
+.titre_principal {
+    display: none;
 }
 
 .recommandation {
     width: 25%;
-    margin: 5% 37.5% 5% 37.5%;
+    margin: 4% 37.5% 4% 37.5%;
 }
 
-.description_openclassrooms {
-    width: 50%;
-    margin: 0 25% 0 25%;
-}
-
-.competence_openclassrooms {
-    width: 60%;
-    margin: 0 20% 0 20%;
+.container_recommandation {
+    display: block;
 }
