ajout des lien sur la feuille index.html et modification de la taille des liens et modification des marge sur les feuille de style.css pour la classe recommandation

--- a/max_width_tv.css
+++ b/max_width_tv.css
@@ -44,6 +44,15 @@
     font-size: 2rem;
 }
 
+a {
+    font-size: 2rem;
+}
+
+.titre_principal,
+.titre {
+    border-bottom: 2px solid black;
+}
+
 .paul_valery,
 .openclassrooms {
     width: 20%;
