--- a/max_width_768px.css
+++ b/max_width_768px.css
@@ -92,10 +92,7 @@ h4 {
 }
 
 img {
-    width: 180px;
-    height: 180px;
-    border-radius: 90px;
-    border: 1px solid black;
+    width: auto;
     margin-top: 5%;
 }
 
